--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!--    mine-->
+    <string name="new_markdown_file_desc">New markdown file</string>
+    <string name="title_activity_editor"/>
+    <string name="action_save">save</string>
 </resources>
